--- a/assets/css/general/basics.css
+++ b/assets/css/general/basics.css
@@ -8,7 +8,10 @@
     --mid-gray-color: #d9d9d9;
     --dark-gray-color: #1a1a1a;
     --black-color: #000;
-    --font-base: raleway, sans-serif;
+
+    --font-heading: 'Lato', sans-serif;
+    --font-base: 'Raleway', sans-serif;
+
     --animation-base: ease;
     --shadow-base: 0 0 10px rgba(0, 0, 0, 0.2);
 }
@@ -50,7 +53,8 @@ h6 {
     margin: 0 0 15px;
     color: var(--dark-gray-color);
     line-height: 1.2;
-    font-weight: 700;
+    font-weight: 400;
+    font-family: var(--font-heading);
 }
 
 p {
