--- a/default.hbs
+++ b/default.hbs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{meta_title}}</title>
     <link rel="stylesheet" href="{{asset "built/screen.css"}}">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,400i,500,700,700i,800&amp;subset=latin-ext">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:ital@0;1&family=Raleway:ital,wght@0,300;0,700;1,300&display=swap">
 
     {{{block "styles"}}}
 
