Implemented intro animation

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -11,6 +11,7 @@
 @import "site/widget.css";
 @import "site/footer.css";
 @import "site/error.css";
+@import "site/intro.css";
 @import "blog/tag.css";
 @import "blog/post.css";
 @import "blog/feed.css";
