--- a/assets/css/blog/pagination.css
+++ b/assets/css/blog/pagination.css
@@ -9,16 +9,16 @@
     outline: none;
     border: 2px solid var(--primary-color);
     line-height: 1;
-    background-color: var(--white-color);
-    border-radius: 50%;
+    background-color: inherit;
     cursor: pointer;
 }
 
 .load-more {
-    margin: 10px 0 6px;
-    color: var(--dark-gray-color);
+    margin: 0 0 0.25rem 0;
+    color: var(--primary-text-color);
     font-size: 15px;
     font-weight: 700;
+    
 }
 
 .page-number {
