--- a/assets/css/blog/post.css
+++ b/assets/css/blog/post.css
@@ -46,7 +46,7 @@
     font-size: 12px;
     font-weight: 700;
     letter-spacing: 0.5px;
-    background-color: var(--primary-color);
+    background-color: var(--dark-middle);
     border-radius: 2px;
 }
 
