--- a/assets/css/general/basics.css
+++ b/assets/css/general/basics.css
@@ -1,7 +1,9 @@
 :root {
     --primary-color: var(--ghost-accent-color, #9692af);
-    --primary-text-color: #222;
+
+    --primary-text-color: #fff;
     --secondary-text-color: #aaa;
+
     --yellow-color: #ffc475;
     --white-color: #fff;
     --light-gray-color: #f1f1f1;
@@ -14,6 +16,10 @@
 
     --animation-base: ease;
     --shadow-base: 0 0 10px rgba(0, 0, 0, 0.2);
+
+    --dark-base: #1E1E1E;
+    --dark-middle: #252526;
+    --dark-light: #333333;
 }
 
 html {
@@ -27,20 +33,20 @@ html {
 }
 
 body {
-    color: var(--primary-text-color);
+    color: var(--secondary-text-color);
     font-family: var(--font-base);
     font-size: 16px;
     line-height: 1.7;
     text-rendering: optimizeLegibility;
     word-break: break-word;
-    background-color: var(--white-color);
+    background-color: var(--dark-base);
     transition: background-color 0.3s var(--animation-base);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
 
 a {
-    color: var(--dark-gray-color);
+    color: var(--primary-text-color);
     text-decoration: none;
 }
 
@@ -51,7 +57,7 @@ h4,
 h5,
 h6 {
     margin: 0 0 15px;
-    color: var(--dark-gray-color);
+    color: var(--primary-text-color);
     line-height: 1.2;
     font-weight: 400;
     font-family: var(--font-heading);
@@ -71,7 +77,7 @@ blockquote {
     margin-right: auto;
     margin-left: auto;
     max-width: 550px;
-    color: var(--dark-gray-color);
+    color: var(--secondary-text-color);
     font-size: 22px;
     line-height: 1.4;
     font-weight: 800;
@@ -103,7 +109,7 @@ figure {
 
 figcaption {
     margin-top: 15px;
-    color: var(--dark-gray-color);
+    color: var(--secondary-text-color);
     font-size: 14px;
     text-align: center;
 }
@@ -120,7 +126,7 @@ hr {
     width: 5px;
     height: 5px;
     border: 0;
-    background-color: var(--dark-gray-color);
+    background-color: var(--primary-text-color);
     border-radius: 50%;
 }
 
