--- a/assets/css/site/off-canvas.css
+++ b/assets/css/site/off-canvas.css
@@ -7,7 +7,7 @@
     padding: 70px 30px 30px;
     width: 350px;
     height: 100vh;
-    background-color: var(--white-color);
+    background-color: var(--dark-middle);
     transition: transform 0.4s var(--animation-base);
     transform: translateX(350px);
     -webkit-overflow-scrolling: touch;
@@ -19,7 +19,7 @@
     right: 15px;
     width: 30px;
     height: 30px;
-    color: var(--dark-gray-color);
+    color: inherit;
     font-size: 23px;
     line-height: 30px;
     text-align: center;
@@ -28,7 +28,7 @@
 }
 
 .canvas-close:hover {
-    color: var(--secondary-text-color);
+    color: var(--primary-color);
 }
 
 html:not(.canvas-visible) .off-canvas {
