--- a/assets/css/general/basics.css
+++ b/assets/css/general/basics.css
@@ -20,6 +20,10 @@
     --dark-base: #1E1E1E;
     --dark-middle: #252526;
     --dark-light: #333333;
+
+    --scrollbar-thumb: #4F4F4F;
+
+    --intro-animation-duration: 3500ms;
 }
 
 html {
@@ -43,6 +47,23 @@ body {
     transition: background-color 0.3s var(--animation-base);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    font-weight: 300;
+}
+
+*::-webkit-scrollbar {
+    width: 11px;
+}
+* {
+    scrollbar-width: thin;
+    scrollbar-color: var(--scrollbar-thumb) var(--dark-base);
+}
+*::-webkit-scrollbar-track {
+    background: var(--dark-base);
+}
+*::-webkit-scrollbar-thumb {
+    background-color: var(--scrollbar-thumb) ;
+    border-radius: 6px;
+    border: 3px solid var(--dark-base);
 }
 
 a {
