Added logo to side menu

--- a/partials/off-canvas.hbs
+++ b/partials/off-canvas.hbs
@@ -1,4 +1,7 @@
 <aside class="off-canvas">
+    <div class="canvas-logo logo">
+        {{> logo}}
+    </div>
     <div class="canvas-close">
         <i class="canvas-icon icon icon-window-close"></i>
     </div>
