--- a/assets/css/site/off-canvas.css
+++ b/assets/css/site/off-canvas.css
@@ -13,6 +13,24 @@
     -webkit-overflow-scrolling: touch;
 }
 
+.canvas-logo {
+    position: absolute;
+    top: 3rem;
+    width: 7.5rem;
+    height: 2.75rem;
+}
+
+.canvas-logo > .logo {
+    width: 100%;
+    height: 100%;
+}
+
+.canvas-logo > .logo > .logo-image {
+    object-fit: contain;
+    object-position: left center;
+    max-height: unset;
+}
+
 .canvas-close {
     position: absolute;
     top: 15px;
