--- a/partials/post-header.hbs
+++ b/partials/post-header.hbs
@@ -4,7 +4,7 @@
             <div class="post-tags">
                 {{#foreach tags}}
                     <a class="post-tag post-tag-{{slug}}" href="{{url}}"
-                        title="{{name}}">{{name}}</a>
+                        title="{{name}}" {{#if accent_color}} style="background-color: {{accent_color}};" {{/if}}>{{name}}</a>
                 {{/foreach}}
             </div>
         {{/if}}
