--- a/assets/css/site/off-canvas.css
+++ b/assets/css/site/off-canvas.css
@@ -4,7 +4,7 @@
     right: 0;
     z-index: 90;
     overflow-y: scroll;
-    padding: 70px 30px 30px;
+    padding: 7rem 2rem 2rem 2rem;
     width: 350px;
     height: 100vh;
     background-color: var(--dark-middle);
