Introduced Material Icons

--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -1,6 +1,7 @@
 <header class="site-header">
     <div class="navbar">
         {{> logo}}
-        <div class="burger"></div>
+        <span class="material-icons burger">menu</span>
+        {{!-- <div class="burger"></div> --}}
     </div>
 </header>
