--- a/partials/post-meta.hbs
+++ b/partials/post-meta.hbs
@@ -11,9 +11,10 @@
         </span>
         <span class="post-meta-item post-meta-length">{{reading_time}}</span>
         {{#if featured}}
-            <span class="post-meta-featured">
+            {{!-- <span class="post-meta-featured">
                 <i class="icon icon-star"></i>
-            </span>
+            </span> --}}
+            <span class="material-icons post-meta-featured">star</span>
         {{/if}}
     </div>
 {{/is}}
