--- a/partials/off-canvas.hbs
+++ b/partials/off-canvas.hbs
@@ -2,9 +2,10 @@
     <div class="canvas-logo logo">
         {{> logo}}
     </div>
-    <div class="canvas-close">
+    {{!-- <div class="canvas-close">
         <i class="canvas-icon icon icon-window-close"></i>
-    </div>
+    </div> --}}
+    <span class="material-icons canvas-close">close</span>
     {{#if @site.navigation}}
         <nav class="main-menu widget">
             {{navigation}}
