--- a/assets/css/blog/post.css
+++ b/assets/css/blog/post.css
@@ -37,6 +37,11 @@
     font-size: 18px;
 }
 
+.post-title-link:hover {
+    text-decoration: underline var(--primary-color);
+    text-decoration-thickness: var(--accent-line-width);
+}
+
 .post-tags {
     margin-bottom: 10px;
 }
