--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -1,6 +1,6 @@
 {{#if next}}
     <button class="pagination" data-url="{{page_url next}}">
-        <span class="load-more">Load More</span>
+        <span class="load-more u-underline">Load More</span>
         <span class="page-number">Page {{page}} of {{pages}}</span>
     </button>
 {{/if}}
