--- a/assets/css/site/burger.css
+++ b/assets/css/site/burger.css
@@ -8,7 +8,7 @@
     transition: color 0.4s var(--animation-base);
 }
 
-.burger:hover {
+.burger:hover, .burger:focus {
     color: var(--primary-color);
 }
 
