--- a/assets/css/site/footer.css
+++ b/assets/css/site/footer.css
@@ -41,7 +41,7 @@
     transition: color 0.2s var(--animation-base);
 }
 
-.footer-social-item:hover {
+.footer-social-item:hover, .footer-social-item:focus {
     color: var(--primary-color);
 }
 
