--- a/assets/css/general/basics.css
+++ b/assets/css/general/basics.css
@@ -26,6 +26,10 @@
     --intro-animation-duration: 3500ms;
 
     --accent-line-width: 2px;
+    --accent-charm-width: 2rem;
+    --accent-charm-animation-duration: 400ms;
+
+    --highlight: rgba(255, 255, 0, 0.25);
 }
 
 html {
@@ -36,6 +40,10 @@ html {
 *::before,
 *::after {
     box-sizing: inherit;
+}
+
+::selection { 
+    background: var(--highlight); 
 }
 
 body {
@@ -55,13 +63,16 @@ body {
 *::-webkit-scrollbar {
     width: 11px;
 }
+
 * {
     scrollbar-width: thin;
     scrollbar-color: var(--scrollbar-thumb) var(--dark-base);
 }
+
 *::-webkit-scrollbar-track {
     background: var(--dark-base);
 }
+
 *::-webkit-scrollbar-thumb {
     background-color: var(--scrollbar-thumb) ;
     border-radius: 6px;
