Added underline to post header

--- a/partials/post-header.hbs
+++ b/partials/post-header.hbs
@@ -15,7 +15,7 @@
     {{else}}
         {{> post-meta}}
         <{{tag}} class="post-title">
-            <a class="post-title-link" href="{{url}}">{{title}}</a>
+            <a class="post-title-link u-underline" href="{{url}}">{{title}}</a>
         </{{tag}}>
     {{/if}}
 </header>
