Added hover animation

--- a/assets/css/blog/share.css
+++ b/assets/css/blog/share.css
@@ -13,9 +13,19 @@
     height: 40px;
     font-size: 15px;
     font-weight: 700;
-    background-color: var(--dark-light);
-    transition: 0.3s var(--animation-base);
-    transition-property: background-color, color;
+
+    background:
+    linear-gradient(to right, var(--dark-light), var(--dark-light)),
+    linear-gradient(to right, var(--primary-color), var(--primary-color));
+
+    
+    background-size: 100% 100%, 0 100%;
+    background-position: 100% 100%, 0 100%;
+    background-repeat: no-repeat;
+
+    transition:
+    background-size var(--accent-charm-animation-duration) var(--animation-base), 
+    color var(--accent-charm-animation-duration) var(--animation-base);
 }
 
 .share-item + .share-item {
@@ -24,7 +34,7 @@
 
 .share-item:hover, .share-item:focus {
     color: var(--white-color);
-    background-color: var(--primary-color);
+    background-size: 0 100%, 100% 100%;
 }
 
 .share-label {
