Made burger fixed

--- a/assets/css/site/burger.css
+++ b/assets/css/site/burger.css
@@ -1,11 +1,12 @@
 .burger {
-    position: relative;
+    position: fixed;
     flex-shrink: 0;
     padding: 0.25rem;
     border: 2px solid var(--mid-gray-color);
     background-color: var(--dark-light);
     cursor: pointer;
     transition: color 0.4s var(--animation-base);
+    right: 2rem;
 }
 
 .burger:hover, .burger:focus {
