--- a/assets/css/site/term.css
+++ b/assets/css/site/term.css
@@ -8,7 +8,7 @@
     display: flex;
     align-items: center;
     margin-bottom: 5px;
-    color: var(--primary-color);
+    color: var(--primary-text-color);
     font-size: 30px;
     font-weight: 800;
 }
