--- a/assets/css/blog/elements.css
+++ b/assets/css/blog/elements.css
@@ -23,7 +23,7 @@
 }
 
 .kg-bookmark-card {
-    border: 1px solid var(--mid-gray-color);
+    border: 1px solid var(--md-shade133);
     border-radius: 4px;
 }
 
@@ -44,7 +44,7 @@
 }
 
 .kg-bookmark-title {
-    color: var(--dark-gray-color);
+    color: var(--md-shade37);
     font-size: 18px;
     line-height: 1.3;
     font-weight: 700;
@@ -53,7 +53,7 @@
 .kg-bookmark-description {
     overflow: hidden;
     margin-top: 5px;
-    color: var(--secondary-text-color);
+    color: var(--md-shade37);
     font-weight: 400;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -79,7 +79,7 @@
 }
 
 .kg-bookmark-metadata > span {
-    color: var(--dark-gray-color);
+    color: var(--md-shade30);
 }
 
 .kg-bookmark-metadata > span:nth-of-type(2)::before {
