--- a/assets/css/blog/post.css
+++ b/assets/css/blog/post.css
@@ -39,7 +39,7 @@
     position: relative;
     top: 1px;
     padding-left: 5px;
-    color: var(--yellow-color);
+    color: var(--md-additional71);
     font-size: 10pt !important;
 }
 
@@ -59,7 +59,7 @@
     font-size: 12px;
     font-weight: 700;
     letter-spacing: 0.5px;
-    background-color: var(--dark-middle);
+    background-color: var(--md-shade37);
     border-radius: 2px;
 }
 
