--- a/assets/css/blog/share.css
+++ b/assets/css/blog/share.css
@@ -15,7 +15,7 @@
     font-weight: 700;
 
     background:
-    linear-gradient(to right, var(--dark-light), var(--dark-light)),
+    linear-gradient(to right, var(--md-shade51), var(--md-shade51)),
     linear-gradient(to right, var(--primary-color), var(--primary-color));
 
     
