--- a/assets/css/site/error.css
+++ b/assets/css/site/error.css
@@ -4,7 +4,7 @@
 
 .error-code {
     margin: 90px 0 -5px;
-    color: var(--dark-gray-color);
+    color: var(--ghost-accent-color);
     font-size: 46px;
     font-weight: 700;
     letter-spacing: 2px;
