--- a/assets/css/site/intro.css
+++ b/assets/css/site/intro.css
@@ -1,5 +1,5 @@
 .intro-background {
-    background-color: var(--dark-base);
+    background-color: var(--md-shade30);
     position: fixed;
     width: 100%;
     height: 100%;
@@ -46,7 +46,7 @@
     }
 
     33% {
-        background-color: var(--dark-base);
+        background-color: var(--md-shade30);
         opacity: 1;
         pointer-events: auto;
     }
