--- a/assets/css/site/widget.css
+++ b/assets/css/site/widget.css
@@ -32,12 +32,11 @@
     content: counter(recent);
     margin-top: -10px;
     margin-right: 20px;
-    color: var(--secondary-text-color);
+    color: var(--md-shade133);
     font-size: 60px;
     line-height: 1;
     font-weight: 700;
     counter-increment: recent;
-    opacity: 0.75;
     width: 2rem;
     transition: color var(--accent-charm-animation-duration);
 }
