--- a/assets/css/blog/post.css
+++ b/assets/css/blog/post.css
@@ -39,7 +39,7 @@
     position: relative;
     top: 1px;
     padding-left: 5px;
-    color: var(--md-additional71);
+    color: var(--yellow-color);
     font-size: 10pt !important;
 }
 
