Added conditional transparent background for header

--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -1,4 +1,4 @@
-<header class="site-header">
+<header class="site-header" {{#is "home"}} style="background-color: transparent;" {{/is}}>
     <div class="navbar">
         {{> logo}}
         <span class="material-icons burger">menu</span>
