--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,3 +1,4 @@
+<div class="site-footer-spacer"></div>
 <footer class="site-footer">
     <div class="copyright">
         Powered by <a href="https://ghost.org/" target="_blank">Ghost</a>
