--- a/assets/css/site/header.css
+++ b/assets/css/site/header.css
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 100px;
+    height: var(--site-header-height);
 }
 
 .logo {
