--- a/assets/css/site/layout.css
+++ b/assets/css/site/layout.css
@@ -6,7 +6,7 @@
 
 .site-content {
     flex-grow: 1;
-    padding-top: 100px;
+    padding-top: var(--site-header-height);
 }
 
 .home-template .site-content {
