Added PrismJS syntax highlighter

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -26,5 +26,6 @@
 @import "vendor/lazyload.css";
 @import "vendor/slicknav.css";
 @import "vendor/owl.css";
+@import "vendor/prism.css";
 @import "misc/kg.css";
 @import "misc/utilities.css";
