--- a/default.hbs
+++ b/default.hbs
@@ -13,7 +13,7 @@
     {{ghost_head}}
 </head>
 
-<body class="{{body_class}}">
+<body class="{{body_class}} line-numbers">
     <div class="site">
         {{> header}}
         <div class="site-content">
