--- a/assets/css/site/off-canvas.css
+++ b/assets/css/site/off-canvas.css
@@ -21,9 +21,9 @@
     position: absolute;
     left: 0;
     top: 0;
-    height: 100%;
+    bottom: 0;
     transition: width var(--accent-charm-animation-duration) var(--animation-base);
-    z-index: 999;
+    z-index: 9999;
 }
 
 .canvas-logo {
