Added table styling

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -12,6 +12,7 @@
 @import "site/footer.css";
 @import "site/error.css";
 @import "site/intro.css";
+@import "site/table.css";
 @import "blog/tag.css";
 @import "blog/post.css";
 @import "blog/feed.css";
